fix(copy-btn): Remove negative spacing

--- a/src/assets/scss/_components/_bot-message.scss
+++ b/src/assets/scss/_components/_bot-message.scss
@@ -35,11 +35,6 @@
 		gap: $spacing-xs;
 		margin-top: $spacing-sm;
 		margin-bottom: 0;
-
-		&:not(:has(.docsbot-sources-title)) {
-			margin-top: -6px;
-			margin-bottom: calc($spacing-sm * -1);
-		}
 	}
 
 	.docsbot-copy-button {
